--- a/Css/styles.css
+++ b/Css/styles.css
@@ -10,17 +10,40 @@
 --------------- <Body> */
 body {
   width: 100%;
+  height: 100vh;
   background: url(/Images/joshua-earle-t6QYC3Zmis0-unsplash.jpg);
   background-size: cover;
+  background-repeat: no-repeat;
   font-family: futura, sans-serif;
 }
-.home__text {
-  width: 40%;
-  margin: 8% 0 auto 10%;
-}
-.home__social {
+.home__main-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
   
+  /* this will add height to the section container but you need to remove the height of 
+  the header otherwise it will have scroll. With the height set, now you have enought "height"
+  to make it center (the height of the header is actually 72.something but we make it 73 just to be safe) */
+  height: calc(100vh - 73px); /* vh stands for viewport height, it means 100% of viewport height */
+  /* and use this to make it center, since we are using flex here */
+  align-items: center;
 }
+.home__text {
+  width: 85%;
+  /* margin: 8% 0 auto 10%; */
+  padding: 150px;
+}
+.social-icons {
+  display: flex;
+  flex-direction: column;
+  padding: 55px;
+  font-size: 30px;
+  color: #fff;
+}
+.social-link {
+
+}
+
 
 /* -------------- <Nav> */
 
@@ -29,8 +52,9 @@ body {
   padding-top: 5px;
 }
 nav {
-  background-color: rgba(222, 247, 255, 0.1);
-  padding: 20px 40px;
+  background-color: rgba(107, 134, 153, 0.3);
+  -webkit-backdrop-filter: blur(18px);
+  padding: 10px 40px;
   font-size: 1rem;
   text-transform: uppercase;
   display: flex;
