--- a/Css/styles.css
+++ b/Css/styles.css
@@ -1,72 +1,146 @@
-/* Global Styles
--------------------------------- */
+/* Global Styles ----------------- */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-/* Home Page       
---------------- <Body> */
+/* Home Page ---------------------*/
+
 body {
   width: 100%;
-  height: 100vh;
   background: url(/Images/joshua-earle-t6QYC3Zmis0-unsplash.jpg);
   background-size: cover;
   background-repeat: no-repeat;
+  background-position-x: right;
+  margin-right: auto;
   font-family: futura, sans-serif;
 }
 .home__main-container {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  
-  /* this will add height to the section container but you need to remove the height of 
-  the header otherwise it will have scroll. With the height set, now you have enought "height"
-  to make it center (the height of the header is actually 72.something but we make it 73 just to be safe) */
-  height: calc(100vh - 73px); /* vh stands for viewport height, it means 100% of viewport height */
-  /* and use this to make it center, since we are using flex here */
+  height: calc(100vh - 73px);
   align-items: center;
 }
 .home__text {
-  width: 85%;
-  /* margin: 8% 0 auto 10%; */
+  width: 80vh;
+  display: flex;
+  margin: auto;
   padding: 150px;
+  margin: auto;
 }
 .social-icons {
   display: flex;
   flex-direction: column;
-  padding: 55px;
   font-size: 30px;
   color: #fff;
+  list-style-type: none;
+  margin-right: auto;
+}
+.social-link:hover, nav a:hover {
+color: #d42d59;
+cursor: pointer;
 }
 .social-link {
+  padding: 55px 30px;
+}
 
+.div21 {
+  margin-right: auto;
+}
+
+.div22 {
+  margin-left: auto;
 }
 
 
-/* -------------- <Nav> */
+/* NAV -------------------------*/
 
-.logo {
-  width: 100px;
-  padding-top: 5px;
-}
-nav {
+header {
   background-color: rgba(107, 134, 153, 0.3);
   -webkit-backdrop-filter: blur(18px);
-  padding: 10px 40px;
+  padding: 10px 0px;
+  font-size: 1rem;
+  text-transform: uppercase;
+}
+.logo {
+  max-width: 100px;
+}
+nav, #hamburger-menu {
+  display: none;
+  }
+nav {
+  width: 100%;
+  padding: 10px 20px;
   font-size: 1rem;
   text-transform: uppercase;
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-ul {
+ }
+nav ul {
   display: flex;
+  gap: 80px;
+  padding-left: 52vw;
   list-style-type: none;
-  gap: 200px;
+  margin: auto;
+}
+.hamburger-label {
+  float: right;
+  color: #FFF;
+  padding: 10px 10px;
+  font-size: 1.5em;
+  /* align-items: flex-end ; */
+}
+nav li {
+  margin: 0;
+  padding: 0;
+  
 }
 nav a {
   color: #fff;
   text-decoration: none;
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+  margin-right: auto;
 }
+
+/* Media Queries       
+--------------------- */
+
+#hamburger-menu:checked ~ nav {
+    display: block;
+}
+/* mobile and small tablet - 767px and smaller */
+@media(max-width: 767px){
+  .hamburger-label {
+    display: flex;
+  }
+  .home__text {
+    display: none;
+  }
+
+  nav ul {
+    display: none;
+  }
+}
+
+/* small Deskktop / Portrait tablet - 1024px and smaller */
+  @media(min-width: 768px) and (max-width: 1024px){
+    .hamburger-label {
+      display: flex;
+    }
+    nav ul {
+      display: none;
+    }
+  }
+
+  /* laptops and desktops - 1025px and bigger */
+  @media(min-width: 1025px){
+    .hamburger-label {
+      display: none;
+    }
+    
+  }
