Changed width to fit viewport

--- a/Css/styles.css
+++ b/Css/styles.css
@@ -17,7 +17,7 @@ body {
   margin: auto;
 }
 .home__main-container {
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: space-evenly;
   height: calc(100vh - 73px);
