--- a/Css/styles.css
+++ b/Css/styles.css
@@ -44,6 +44,7 @@ cursor: pointer;
 }
 .text-left {
   margin-right: auto;
+  max-width: 400px;
 }
 .social-right {
   margin-left: auto;
@@ -96,7 +97,7 @@ nav li {
   padding: 0;
   
 }
-nav a {
+nav a { 
   color: #fff;
   text-decoration: none;
   margin: auto;
@@ -120,12 +121,11 @@ nav a {
       display: none;
     }
     .home__text {
-      /* display: block; */
       display: flex;
       padding: 0;
       background-position: center;
       background-size: contain;
-      width: 400px;
+      width: 100%;
       margin: auto;
     }
     .social-icons {
