--- a/Css/styles.css
+++ b/Css/styles.css
@@ -116,6 +116,14 @@ cursor: pointer;
   margin-left: auto;
   margin-top: 0;
 }
+.licence {
+  padding: 10px 20px;
+  font-size: 0.6rem;
+  text-transform: uppercase;
+}
+.licence a {
+  color: #FFF;
+}
 
 
 /* NAV HOME-------------------------*/
@@ -146,8 +154,9 @@ cursor: pointer;
   font-size: 1.8rem;
   text-transform: uppercase;
   letter-spacing: .5rem;
-  
-
+}
+.body__jackets {
+  background-color: #9EAC8B;
 }
 
 /* Media Queries       
