--- a/Css/styles.css
+++ b/Css/styles.css
@@ -195,6 +195,8 @@ img {
 
 .product__main {
   max-width: 100%;
+  height: 80vh;
+
 }
 .product__main a {
   font-family: futura, sans-serif;
@@ -203,11 +205,11 @@ img {
   width: 100%;
   position: relative;
 }
-.inserts__product {
-  width: 30%;
+.inserts__container {
+  width: 20%;
   position: absolute;
-  top: 300px;
-  left: 875px;
+  top: 100px;
+  left: 175px;
 }
 .button__product{
   display: flex;
