--- a/Css/styles.css
+++ b/Css/styles.css
@@ -161,14 +161,16 @@ cursor: pointer;
   text-transform: uppercase;
   letter-spacing: .5rem;
 }
+.main__jackets {
+  height: calc(100vh - 62.9333px);
+}
 .grid-container__jackets { 
   display: grid;
   width: 60%;
-  height: 40vh;
   justify-items: center;
   align-items: center;
   grid-template-columns: 1fr 1fr;
-  margin: 20px auto;
+  margin: 0 auto;
 }
 .hex-img-large__jackets {
   height: 20vh;
@@ -180,13 +182,12 @@ img {
   filter: drop-shadow(0 15px 9px rgb(46, 46, 46));
 }
 .discount-tag {
-  position: absolute;
   background-color: #F21111;
   color: #FFF;
   text-align: center;
   font-size: 90px;
   margin: 0 auto;
-  width: 80px;
+  width: 100px;
   filter: drop-shadow(0 10px 10px #000);
 }
 
@@ -195,41 +196,41 @@ img {
 
 .product__main {
   max-width: 100%;
-  height: 80vh;
+  min-height: 80vh;
 
 }
 .product__main a {
   font-family: futura, sans-serif;
 }
 .background__img {
-  width: 100%;
+  width: 100%;;
   position: relative;
 }
 .inserts__container {
-  width: 20%;
   position: absolute;
-  top: 100px;
-  left: 175px;
+  top: 200px;
+  left: 600px;
+}
+.inserts__product {
+  width: 25%;
+}
+.button__container {
+  width: 20%;
 }
 .button__product{
-  display: flex;
-  justify-content: center;
   align-items: center;
   height: 80px;
   width: 350px;
   background-color: #708036;
   border: 2px solid #fff;
   border-radius: 18px;
-  position: absolute;
-  top: 900px;
-  left: 1000px;
   text-decoration: none;
   text-transform: uppercase;
   font-size: 30px;
   color: #FFF;
 }
 .button__product i {
-  font-size: 40px;
+  font-size: 30px;
   padding: 10px 30px 15px 0;
 }
 
