--- a/Css/styles.css
+++ b/Css/styles.css
@@ -17,6 +17,13 @@ h1 {
   transform: translateX(-50%);
   color: #fff;
 }
+h2 {
+  text-transform: uppercase;
+  color: #fff;
+  font-weight: 400;
+  letter-spacing: 5px;
+  filter: drop-shadow(0 3px 2px #000);
+}
 
 
 /* NAV HOME-------------------------*/
@@ -178,8 +185,8 @@ cursor: pointer;
   grid-template-columns: 1fr 1fr;
   margin: 0 auto;
 }
-.hex-img__jackets {
-  filter: drop-shadow(0 15px 9px rgb(46, 10, 46));
+.hex-img {
+  filter: drop-shadow(0 15px 9px rgb(46, 23, 46));
 }
 .hex-img-large__jackets {
   height: 20vh;
@@ -246,9 +253,15 @@ img {
 
 /* Checkout Page ---------------------*/
 
+
+.checkout__img {
+  max-width: 25%;
+ }
 .checkout__container {
   width: 100%;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 }
 .images__checkout {
   width: 100%;
@@ -258,9 +271,69 @@ img {
   gap: 15%;
   padding-top: 100px;
 }
-.checkout__img {
- max-width: 25%;
+.total__checkout.images__checkout {
+  display: flex;
+  align-items: center;
+  /* flex: 1; */
+  max-width: 70%;
+  padding-bottom: 60px;
 }
+.total-text {
+  /* height: 100%; */
+}
+.shopping-bag {
+  width: 10%;
+}
+.button-checkout__container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding-bottom: 50px;
+}
+.button__checkout {
+  background-color: #BCCB9D;
+  /* border: 2px solid #fff; */
+  border-radius: 14px;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 20px;
+  color: #525252;
+  padding: 10px 30px;
+  filter: drop-shadow(0 10px 7px #000);         
+}
+.progressbar__checkout {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  width: 80%
+}
+.circle {
+  height: 80px;
+  width: 80px;
+  background-color: #fff;
+  border-radius: 50%;
+  box-shadow: 6px 6px 10px -1px rgba(253, 252, 252, 0.2),
+              -2px -2px 10px -4px rgba(250, 250, 250, 1);
+}
+.circle2 {
+  height: 60px;
+  width: 60px;
+  margin: 10px;
+  background-color: #9EAC8B;
+  border-radius: 50%;
+  box-shadow: inset 4px 4px 6px -1px rgba(0, 0, 0, 0.2),
+              inset -4px -4px 6px -1px rgba(12, 11, 11, 0.7),
+              -0.5px -0.5px 0px rgba(255, 255, 255, 1),
+              0.5px 0.5px 0px rgba(255, 255, 255, 0.15),
+              0px 12px 10px -10px rgba(3, 3, 3, 0.5);
+}
+.line {
+  height: 3px;
+  width: 400px;
+  background-color: #fff;
+}
+
 
 /* Media Queries       
 --------------------- */
