--- a/Css/styles.css
+++ b/Css/styles.css
@@ -308,18 +308,26 @@ img {
   margin: auto;
   width: 80%
 }
+.circle-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .circle {
-  height: 80px;
-  width: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 5vh;
+  width: 5vh;
   background-color: #fff;
   border-radius: 50%;
   box-shadow: 6px 6px 10px -1px rgba(253, 252, 252, 0.2),
               -2px -2px 10px -4px rgba(250, 250, 250, 1);
 }
 .circle2 {
-  height: 60px;
-  width: 60px;
-  margin: 10px;
+  height: 1vh;
+  width: 1vh;
+  padding: 2vh;
   background-color: #9EAC8B;
   border-radius: 50%;
   box-shadow: inset 4px 4px 6px -1px rgba(0, 0, 0, 0.2),
@@ -330,9 +338,20 @@ img {
 }
 .line {
   height: 3px;
-  width: 400px;
+  width: 100%;
+  margin-bottom: 30px;
   background-color: #fff;
 }
+.bar-tags {
+  display: flex;
+  justify-content: space-around;
+}
+.progressbar-tags {
+  margin-top: 10px;
+  text-transform: uppercase;
+}
+
+
 
 
 /* Media Queries       
