--- a/Css/styles.css
+++ b/Css/styles.css
@@ -352,12 +352,46 @@ img {
 }
 
 
-/* Checkout Page ---------------------*/
+/* About Page ---------------------*/
 
 .body__about {
-  background-color: #414141;
+  height: 100%;
+  margin: 0;
+  /* background-color: #414141; */
 }
-
+.text__about {
+  position: absolute;
+  text-transform: uppercase;
+  font-size: 2em;
+  letter-spacing: 0.2em;
+}
+.top-text__about {
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -45%);
+}
+.bottom-text__about {
+  top: 65%;
+  left: 75%;
+}
+.arrow {
+  color: #fff;
+  font-size: 2rem;
+  width: 100%;
+  margin: auto;
+  text-align: center;
+  position: absolute;
+  bottom: 20px;
+}
+.background {
+  height: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.image-1 {
+  background-image: url(/images/photos/tim-jones-NQjvaCYp0h4-unsplash.jpg);
+}
 /* Media Queries       
 --------------------- */
 
