--- a/Css/styles.css
+++ b/Css/styles.css
@@ -354,11 +354,24 @@ img {
 
 /* About Page ---------------------*/
 
-.body__about {
-  height: 100%;
-  margin: 0;
-  /* background-color: #414141; */
+.background-about {
+  width: 100%;
+  height: 1005px;
+  object-fit: cover;
+  object-position: top;
+  background-color: #707070;
 }
+.header-about {
+  background-color: #707070;
+}
+/* .body__about {
+  height: 50%;
+  background-color: #414141;
+  background-image: url(/images/photos/tim-jones-NQjvaCYp0h4-unsplash.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+} */
 .text__about {
   position: absolute;
   text-transform: uppercase;
@@ -366,9 +379,9 @@ img {
   letter-spacing: 0.2em;
 }
 .top-text__about {
-  top: 55%;
+  top: 65%;
   left: 50%;
-  transform: translate(-50%, -45%);
+  transform: translate(-50%, -35%);
 }
 .bottom-text__about {
   top: 65%;
@@ -383,14 +396,40 @@ img {
   position: absolute;
   bottom: 20px;
 }
-.background {
-  height: 50%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+.image-left {
+ max-width: 480px;
 }
-.image-1 {
-  background-image: url(/images/photos/tim-jones-NQjvaCYp0h4-unsplash.jpg);
+.image-right {
+  max-width: 580px;
+}
+.about-grid {
+  display: grid;
+  gap: 1.5rem;
+  grid-template-columns: repeat(3, 1fr);
+  background-color: #707070;
+}
+.about-grid p {
+  color: #fff;
+  font-size: 1.3rem;
+}
+.about-grid-item-text1 {
+  padding: 50px 50px 20px 50px;
+}
+.about-grid-item-text2 {
+  padding: 10px 50px;
+}
+.grid-col-span-2 {
+  grid-column: span 2;
+}
+.about-grid-item:nth-child(3){
+  grid-column: 2;
+  grid-row: 1;
+}
+.about-grid-item:nth-child(4){
+  grid-column: 2/-1;
+}
+.about-grid-item:nth-child(1){
+  grid-row: 1/3;
 }
 /* Media Queries       
 --------------------- */
