--- a/Css/styles.css
+++ b/Css/styles.css
@@ -1,4 +1,5 @@
-/* Global Styles ----------------- */
+/* GLOBAL STYLES 
+-----------------------------------------------------------*/
 
 * {
   margin: 0;
@@ -26,7 +27,8 @@ h2 {
 }
 
 
-/* NAV HOME-------------------------*/
+/* NAV HOME 
+-----------------------------------------------------------*/
 
 .header__home{
   background-color: rgba(107, 134, 153, 0.3);
@@ -76,7 +78,8 @@ h2 {
 }
 
 
-/* Home Page ---------------------*/
+/* HOME PAGE 
+-----------------------------------------------------------*/
 
 .body__home {
   width: 100%;
@@ -140,16 +143,17 @@ cursor: pointer;
 }
 
 
-/* NAV JACKETS-------------------------*/
+/* NAV ALL 
+-----------------------------------------------------------*/
 
-.nav__jackets {
+.nav__all {
   display: grid;
   /* grid-template-columns: 1fr 2fr .3fr .3fr .4fr; */
   grid-template-columns: 8fr 1fr 1fr 1fr;
   align-items: center;
   justify-items: center;
 }
-.nav__jackets a {
+.nav__all a {
   justify-self: self-start;
   padding-left: 20px;
 }
@@ -158,7 +162,9 @@ cursor: pointer;
   font-size: 1.6rem;
 }
 
-/* Jackets Page ---------------------*/
+
+/* JACKETS PAGE 
+-----------------------------------------------------------*/
 
 .body__jackets {
   background-color: #9EAC8B;
@@ -173,9 +179,6 @@ cursor: pointer;
   font-size: 1.8rem;
   text-transform: uppercase;
   letter-spacing: .5rem;
-}
-.main__jackets {
-  height: calc(100vh - 62.9333px);
 }
 .grid-container__jackets { 
   display: grid;
@@ -194,9 +197,6 @@ cursor: pointer;
 .hex-img-small__jackets {
   height: 10vh; 
 }
-img {
-  /* filter: drop-shadow(0 15px 9px rgb(46, 46, 46)); */
-}
 .discount-tag {
   background-color: #F21111;
   color: #FFF;
@@ -208,7 +208,8 @@ img {
 }
 
 
-/* Product Page ---------------------*/
+/* PRODUCT PAGE 
+-----------------------------------------------------------*/
 
 .product__main {
   max-width: 100%;
@@ -250,8 +251,8 @@ img {
 }
 
 
-/* Checkout Page ---------------------*/
-
+/* CHECKOUT PAGE
+-----------------------------------------------------------*/
 
 .checkout__img {
   max-width: 25%;
@@ -276,9 +277,6 @@ img {
   /* flex: 1; */
   max-width: 70%;
   padding-bottom: 60px;
-}
-.total-text {
-  /* height: 100%; */
 }
 .shopping-bag {
   width: 10%;
@@ -351,7 +349,8 @@ img {
 }
 
 
-/* About Page ---------------------*/
+/* ABOUT PAGE 
+-----------------------------------------------------------*/
 
 .background-about {
   width: 100%;
@@ -362,15 +361,9 @@ img {
 }
 .header-about {
   background-color: #707070;
+  padding: 10px 0px;
+  text-transform: uppercase;
 }
-/* .body__about {
-  height: 50%;
-  background-color: #414141;
-  background-image: url(/images/photos/tim-jones-NQjvaCYp0h4-unsplash.jpg);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-} */
 .text__about {
   position: absolute;
   text-transform: uppercase;
@@ -404,7 +397,7 @@ img {
   top: 76%;
 }
 .image-left {
- max-width: 480px;
+  max-width: 480px;
 }
 .image-right {
   max-width: 580px;
@@ -438,8 +431,10 @@ img {
 .about-grid-item:nth-child(1){
   grid-row: 1/3;
 }
-/* Media Queries       
---------------------- */
+
+
+/* MEDIA QUERIES 
+-----------------------------------------------------------*/
 
 /* mobile and tablet - 1024px and smaller */
 @media(max-width: 1024px) {
