--- a/Css/styles.css
+++ b/Css/styles.css
@@ -7,10 +7,10 @@
   box-sizing: border-box;
 }
 body {
-font-family: futura-pt,sans-serif;
-font-weight: 400;
-font-style: normal;
-font-size: 1rem;
+  font-family: futura-pt,sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1rem;
 }
 h1 {
   position: absolute;
@@ -114,13 +114,15 @@ h2 {
   padding: 10px 40px;
   margin: auto;
 }
-.social-icons {
+.social-icons,
+.social-icons a {
   display: flex;
   flex-direction: column;
   font-size: 20px;
   color: #fff;
   list-style-type: none;
-  padding-bottom: 100px;
+  /* padding-bottom: 100px; */
+  text-decoration: none;
 }
 .social-link:hover, nav a:hover {
 color: #d42d59;
@@ -206,7 +208,6 @@ cursor: pointer;
   width: 100px;
   filter: drop-shadow(0 10px 10px #000);
 }
-
 
 /* PRODUCT PAGE 
 -----------------------------------------------------------*/
