--- a/Css/styles.css
+++ b/Css/styles.css
@@ -31,14 +31,15 @@ h2 {
 -----------------------------------------------------------*/
 
 .header__home{
-  background-color: rgba(107, 134, 153, 0.3);
-  /* filter: blur(10px); */
-  padding: 10px 0px;
-  font-size: 1rem;
-  text-transform: uppercase;
+  display: flex;
+  background-color: #fff;
+  font-size: .9rem;
+  text-transform: lowercase;
 }
 .logo {
   max-width: 80px;
+  margin: 0 3rem;
+  padding-top: 5px;
 }
 .nav__home, #check {
   display: none;
@@ -52,10 +53,10 @@ h2 {
 }
 .nav__home {
   width: 100%;
-  padding: 0 30px 0 20px;
+  padding: 0 30px 9px 20px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
   position: relative;
  }
 .nav__home ul {
@@ -63,19 +64,19 @@ h2 {
   gap: 80px;
   list-style-type: none;
 }
-.nav__home li {
-  margin: 0;
-  padding: 0;
-}
 .nav__home a { 
-  color: #fff;
+  color: #000;
   text-decoration: none;
-  margin: auto;
-  display: flex;
-  flex-direction: row;
-  margin-right: auto;
 }
-
+.burger {
+  display: none;
+  position: fixed;
+  background: none;
+  border: none;
+}
+.closeIcon {
+  display: none;
+}
 
 /* HOME PAGE 
 -----------------------------------------------------------*/
@@ -113,6 +114,13 @@ h2 {
   padding: 10px 40px;
   margin: auto;
 }
+.social-icons {
+  border: 1px solid #fff;
+  border-radius: .5rem;
+  margin-right: 2rem;
+  display: flex;
+  align-items: center;
+}
 .social-icons,
 .social-icons a {
   display: flex;
@@ -120,7 +128,6 @@ h2 {
   font-size: 20px;
   color: #fff;
   list-style-type: none;
-  /* padding-bottom: 100px; */
   text-decoration: none;
 }
 .social-link:hover, nav a:hover {
@@ -128,11 +135,7 @@ h2 {
   cursor: pointer;
 }
 .social-link {
-  padding: 35px 30px 35px 0;
-}
-.social-right {
-  margin-left: auto;
-  margin-top: 0;
+  padding: 1.2rem;
 }
 .licence {
   padding: 10px 20px;
