--- a/Css/styles.css
+++ b/Css/styles.css
@@ -1,6 +1,8 @@
 /* GLOBAL STYLES 
 -----------------------------------------------------------*/
-
+:root {
+  --clr-white: #fff;
+}
 * {
   margin: 0;
   padding: 0;
@@ -32,7 +34,7 @@ h2 {
 
 .header__home{
   display: flex;
-  background-color: #fff;
+  background-color: var(--clr-white);
   font-size: .9rem;
   text-transform: lowercase;
 }
